[package]
name = "chatbot-api"
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["Tim Van Wassenhove <github@timvw.be>"]
description = "Chatbot API application with Rust"
repository = "https://github.com/timvw/chatbot-api"

[dependencies]
http = "1"
serde = { version = "1", features = ["derive"] }
tokio = {  version = "1", features = ["full"] }
tracing-subscriber = "0.3"
axum = "0.7"
