[package]
name = "chatbot-api"
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["Tim Van Wassenhove <github@timvw.be>"]
description = "Chatbot API application with Rust"
repository = "https://github.com/timvw/chatbot-api"

[dependencies]
http = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = {  version = "1", features = ["full"] }
axum = {  version = "0.7", features = ["json", "macros"] }
anyhow = "1"
tracing = "0.1"
tracing-subscriber = "0.3"
tower-http = { version = "0.5", features = ["catch-panic", "trace", "cors", "timeout"] }
arc-swap = { version = "1"}
uuid = {  version = "1", features = ["v4", "v7", "serde"] }
dotenv = "0.15.0"
async-openai = "0.24.0"
axum-tracing-opentelemetry = "0.19.1"
init-tracing-opentelemetry = {  version = "0.20.0", features = ["otlp", "tracing_subscriber_ext", ] }
opentelemetry = "0.24.0"
